@@ -6,6 +6,7 @@ _libs
 gnome-stones
 gnome-stones.keys
 gnome-stones.desktop
+gnome-stones.schemas
 default.caves
 gnomekoban.caves
 tutorial.caves
