@@ -1,0 +1,79 @@
+<gconfschemafile>
+
+  <schemalist>
+      <schema>
+      <key>/schemas/apps/gnome-stones/preferences/scroll_method</key>
+      <applyto>/apps/gnome-stones/preferences/scroll_method</applyto>
+      <owner>gnome-stones</owner>
+      <type>string</type>
+      <default>atari_scroll</default>
+      <locale name="C">
+        <short>Scroll method</short>
+        <long>Scroll method.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnome-stones/preferences/game_name</key>
+      <applyto>/apps/gnome-stones/preferences/game_name</applyto>
+      <owner>gnome-stones</owner>
+      <type>string</type>
+      <default></default>
+      <locale name="C">
+        <short>Game name</short>
+        <long>Filename of game to load.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnome-stones/preferences/start_cave</key>
+      <applyto>/apps/gnome-stones/preferences/start_cave</applyto>
+      <owner>gnome-stones</owner>
+      <type>int</type>
+      <default>1</default>
+      <locale name="C">
+        <short>Cave number to start</short>
+        <long>Cave number to start.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnome-stones/preferences/sound_enabled</key>
+      <applyto>/apps/gnome-stones/preferences/sound_enabled</applyto>
+      <owner>gnome-stones</owner>
+      <type>bool</type>
+      <default>TRUE</default>
+      <locale name="C">
+        <short>Enable sound support</short>
+        <long>Enable sound support.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnome-stones/preferences/joystick_device</key>
+      <applyto>/apps/gnome-stones/preferences/joystick_device</applyto>
+      <owner>gnome-stones</owner>
+      <type>string</type>
+      <default></default>
+      <locale name="C">
+        <short>Joystick device</short>
+        <long>Device to use for joystick control.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/gnome-stones/preferences/joystick_switch_level</key>
+      <applyto>/apps/gnome-stones/preferences/joystick_switch_level</applyto>
+      <owner>gnome-stones</owner>
+      <type>float</type>
+      <default>0.5</default>
+      <locale name="C">
+        <short>Joystick switch level</short>
+        <long>Joystick switch level.</long>
+      </locale>
+      </schema>
+
+  </schemalist>
+
+</gconfschemafile>
+
